--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Horizon</title>
+    <title>About Us - ZuffTech</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Horizon</h1>
+                <h1>ZuffTech</h1>
             </div>
             <nav>
                 <ul class="nav-links">
@@ -39,11 +39,8 @@
             <div class="container">
                 <div class="about-content">
                     <h2 class="section-title">Our Story</h2>
-                    <p>Horizon was founded in 2020 with a simple mission: to create beautiful, functional websites that help businesses succeed online. What started as a small team of passionate designers and developers has grown into a full-service web agency with clients across multiple industries.</p>
+                    <p>ZuffTech was founded in 2020 with a simple mission: to create beautiful, functional websites that help businesses succeed online. What started as a small team of passionate designers and developers has grown into a full-service web agency with clients across multiple industries.</p>
                     <p>We believe that great design should be accessible to businesses of all sizes. That's why we work closely with each client to understand their unique needs and create custom solutions that deliver results.</p>
-                </div>
-                <div class="about-image">
-                    <img src="/api/placeholder/500/350" alt="Our team at work">
                 </div>
             </div>
         </section>
@@ -54,27 +51,27 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-image">
-                            <img src="/api/placeholder/240/240" alt="Team member photo">
+                            <img src="WhatsApp Image 2025-05-14 at 16.24.01.jpeg" alt="Team member photo">
                         </div>
-                        <h3>Alex Martinez</h3>
+                        <h3>Alex Waweru</h3>
                         <p class="member-role">Creative Director</p>
                         <p>Alex brings over 10 years of design experience to every project, with a keen eye for aesthetics and user experience.</p>
                     </div>
                     <div class="team-member">
                         <div class="member-image">
-                            <img src="/api/placeholder/240/240" alt="Team member photo">
+                            <img src="portofolio.jpeg" alt="Team member photo">
                         </div>
-                        <h3>Taylor Kim</h3>
+                        <h3>Taylor Swift</h3>
                         <p class="member-role">Lead Developer</p>
                         <p>Taylor ensures that our websites not only look great but function flawlessly across all devices and browsers.</p>
                     </div>
                     <div class="team-member">
                         <div class="member-image">
-                            <img src="/api/placeholder/240/240" alt="Team member photo">
+                            <img src="WhatsApp Image 2025-05-14 at 16.39.30.jpeg" alt="Team member photo">
                         </div>
-                        <h3>Jordan Lee</h3>
+                        <h3>Muburi Njuguna</h3>
                         <p class="member-role">Project Manager</p>
-                        <p>Jordan keeps everything running smoothly, ensuring projects are delivered on time and exceed client expectations.</p>
+                        <p>Muburi keeps everything running smoothly, ensuring projects are delivered on time and exceed client expectations.</p>
                     </div>
                 </div>
             </div>
@@ -135,7 +132,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h2>Horizon</h2>
+                    <h2>ZuffTech</h2>
                     <p>Building better digital experiences</p>
                 </div>
                 <div class="footer-links">
@@ -149,13 +146,13 @@
                     </div>
                     <div class="footer-contact">
                         <h3>Contact Us</h3>
-                        <p>Email: info@horizon.example</p>
+                        <p>Email: info@ZuffTech.example</p>
                         <p>Phone: (555) 123-4567</p>
                     </div>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 Horizon. All rights reserved.</p>
+                <p>&copy; 2025 ZuffTech. All rights reserved.</p>
             </div>
         </div>
     </footer>
