--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Horizon</title>
+    <title>Contact Us - ZuffTech</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Horizon</h1>
+                <h1>ZuffTech</h1>
             </div>
             <nav>
                 <ul class="nav-links">
@@ -48,7 +48,7 @@
                         </div>
                         <div>
                             <h3>Email</h3>
-                            <p>info@horizon.example</p>
+                            <p>info@ZuffTech.example</p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -59,7 +59,7 @@
                         </div>
                         <div>
                             <h3>Phone</h3>
-                            <p>(555) 123-4567</p>
+                            <p> +(254) 746590559 </p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -137,7 +137,7 @@
                                 <circle cx="12" cy="10" r="3"></circle>
                             </svg>
                         </div>
-                        <p>Horizon Web Design Studio</p>
+                        <p>ZuffTech Web Design Studio</p>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h2>Horizon</h2>
+                    <h2>ZuffTech</h2>
                     <p>Building better digital experiences</p>
                 </div>
                 <div class="footer-links">
@@ -162,13 +162,13 @@
                     </div>
                     <div class="footer-contact">
                         <h3>Contact Us</h3>
-                        <p>Email: info@horizon.example</p>
-                        <p>Phone: (555) 123-4567</p>
+                        <p>Email: info@ZuffTech.example</p>
+                        <p>Phone: +(254)746590559</p>
                     </div>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 Horizon. All rights reserved.</p>
+                <p>&copy; 2025 ZuffTech. All rights reserved.</p>
             </div>
         </div>
     </footer>
